Initial layout of question screen

--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
   </head>
   <body>
     <header>
-        <a href="./high.html">View high scores</a>
+        <a href="./high.html" class="highLink">View high scores</a>
+        <h3 class="countName">Time:</h3>
+        <h3 class="countNumber">75</h3>
     </header>
     <main>
-
+        <div class="question">Commonly used data types DO Not Include</div>
+        <div class="a1">1. Strings</div>
+        <div class="a2">2. Booleans</div>
+        <div class="a3">3. Alerts</div>
+        <div class="a4">4. Numbers</div>
+        </ol>
+        <div class="correct">Correct</div>
     </main>
     <footer>
         &copy;2021 by Mark Kanczuzewski
