Add styling to question/answer page

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
         <h3 class="countNumber">75</h3>
     </header>
     <main>
-        <div class="question">Commonly used data types DO Not Include</div>
-        <div class="a1">1. Strings</div>
-        <div class="a2">2. Booleans</div>
-        <div class="a3">3. Alerts</div>
-        <div class="a4">4. Numbers</div>
-        </ol>
+        <div class="question">Commonly used data types DO NOT include:</div>
+        <button type="button" class="a1">1. Strings</button>
+        <button type="button" class="a2">2. Booleans</button>
+        <button type="button" class="a3">3. Alerts</button>
+        <button type="button" class="a4">4. Numbers</button>
         <div class="correct">Correct</div>
     </main>
     <footer>
