refactor start-screen again

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <h3 class="countName">Time:</h3>
         <h3 class="countNumber">75</h3>
     </header>
+    <main>
+        <div class="start">
+            <h1>Coding Quiz Challenge</h1>
+            <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p>
+            <button>Start</button>
+        </div>
+    </main>
     <script src="./Assets/js/script.js"></script>
     <footer>
         &copy;2021 by Mark Kanczuzewski
