flow from start to first question

--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
         <h3 class="countNumber">75</h3>
     </header>
     <main>
-        <div class="start">
+        <div class="start" id="startId">
             <h1>Coding Quiz Challenge</h1>
             <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p>
-            <button>Start</button>
+            <button id="startBtn">Start</button>
+        </div>
+        <div class="question" id="questionId">
+            <h1>Commonly used data types do not include:</h1>
+            <button>strings</button>
+            <button>booleans</button>
+            <button>alerts</button>
+            <button>numbers</button>
         </div>
     </main>
-    <script src="./Assets/js/script.js"></script>
+    
     <footer>
         &copy;2021 by Mark Kanczuzewski
     </footer>
-
+    <script src="./Assets/js/script.js"></script>
   </body>
 </html>
