itterate through the buttons

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         </div>
         <div class="question" id="questionId">
             <h1>Commonly used data types do not include:</h1>
-            <button>strings</button>
-            <button>booleans</button>
-            <button>alerts</button>
-            <button>numbers</button>
+            <button id="a1">strings</button>
+            <button id="a2">booleans</button>
+            <button id="a3">alerts</button>
+            <button id="a4">numbers</button>
+            <h2 class="correct">Correct!</h2>
+            <h2 class="incorrect">Incorrect!</h2>
         </div>
     </main>
     
