select choice, display validation

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <button id="a2">booleans</button>
             <button id="a3">alerts</button>
             <button id="a4">numbers</button>
-            <h2 class="correct">Correct!</h2>
-            <h2 class="incorrect">Incorrect!</h2>
+            <h2 class="validationMessage" id="correct">Correct!</h2>
+            <h2 class="validationMessage" id="incorrect">Incorrect!</h2>
+            <div class="correctAnswer" id="correctAnswerId">a3</div>
         </div>
     </main>
     
