array to go through questions intrum

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button id="startBtn">Start</button>
         </div>
         <div class="question" id="questionId">
-            <h1>Commonly used data types do not include:</h1>
+            <h1 id="questionId">Commonly used data types do not include:</h1>
             <button id="a1">strings</button>
             <button id="a2">booleans</button>
             <button id="a3">alerts</button>
@@ -28,12 +28,14 @@
             <h2 class="validationMessage" id="correct">Correct!</h2>
             <h2 class="validationMessage" id="incorrect">Incorrect!</h2>
             <div class="correctAnswer" id="correctAnswerId">a3</div>
+            <div class="questionNoC" id="questionNoId">0</div>
         </div>
     </main>
     
     <footer>
         &copy;2021 by Mark Kanczuzewski
     </footer>
+    <script src="./Assets/js/questions.js"></script>
     <script src="./Assets/js/script.js"></script>
   </body>
 </html>
