loop through questions

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./Assets/css/style.css" />
+    <link rel="stylesheet" href="Assets/css/style.css" />
     <title>Code Quiz</title>
   </head>
   <body>
     <header>
-        <a href="./high.html" class="highLink">View high scores</a>
+        <a href="high.html" class="highLink">View high scores</a>
         <h3 class="countName">Time:</h3>
         <h3 class="countNumber">75</h3>
     </header>
@@ -20,7 +20,7 @@
             <button id="startBtn">Start</button>
         </div>
         <div class="question" id="questionId">
-            <h1 id="questionId">Commonly used data types do not include:</h1>
+            <h1 id="questionIdH1">Commonly used data types do not include:</h1>
             <button id="a1">strings</button>
             <button id="a2">booleans</button>
             <button id="a3">alerts</button>
@@ -35,7 +35,8 @@
     <footer>
         &copy;2021 by Mark Kanczuzewski
     </footer>
-    <script src="./Assets/js/questions.js"></script>
-    <script src="./Assets/js/script.js"></script>
   </body>
+  <!-- <script src="Assets/js/questions.js"></script> -->
+  <script src="Assets/js/script.js"></script>
+
 </html>
