add timer and incorrect question decrement

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <a href="high.html" class="highLink">View high scores</a>
         <h3 class="countName">Time:</h3>
-        <h3 class="countNumber">75</h3>
+        <h3 class="countNumberC" id="countdownNumberId">75</h3>
     </header>
     <main>
         <div class="start" id="startId">
