save initials and score into local storage

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <h1>All Done!</h1>
             <div class="scoreC" id="scoreId">Your final score is:&nbsp</div>
             <form>
-                <label for="initialsId">Enter initials:&nbsp
+                <label for="initialsId">Enter initials:&nbsp</label>
                 <input type="text" id="initialsId" name="initialsN">
-                <input type="submit" value="Submit" class="button"></label>
+                <input type="submit" value="submit" id="submitId" class="button">
                 <br>
                 <br>
             </form>
