--- a/high.html
+++ b/high.html
@@ -14,9 +14,10 @@
     <main>
         <div class=highScore>
             <h1>High Scores</h1>
-            <div id="highScoreList">
+            <div class="highScoreListC" id="highScoreList">
 
             </div>
+            <button id="goBackBtn">Go Back</button>
         </div>
     </main>
     <footer>
